--- a/WatchIT.WebAPI.Services/WatchIT.WebAPI.Services.AccountsService/WatchIT.WebAPI.Services.AccountsService.csproj
+++ b/WatchIT.WebAPI.Services/WatchIT.WebAPI.Services.AccountsService/WatchIT.WebAPI.Services.AccountsService.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -13,11 +13,13 @@
     <PackageReference Include="Microsoft.Owin.Host.SystemWeb" Version="4.2.2" />
     <PackageReference Include="Microsoft.Owin.Security.OAuth" Version="4.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.12" />
+    <PackageReference Include="WatchIT.Common" Version="0.1.0-alpha.25" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\WatchIT.WebAPI.Helpers\WatchIT.WebAPI.Helpers.csproj" />
-    <ProjectReference Include="..\..\WatchIT.WebAPI.Model\WatchIT.WebAPI.Model.csproj" />
+    <ProjectReference Include="..\..\WatchIT.WebAPI.Model\WatchIT.WebAPI.Database.csproj" />
+    <ProjectReference Include="..\WatchIT.WebAPI.Services.Common\WatchIT.WebAPI.Services.Common.csproj" />
   </ItemGroup>
 
 </Project>
