--- a/WatchIT.WebAPI.Services/WatchIT.WebAPI.Services.Common/WatchIT.WebAPI.Services.Common.csproj
+++ b/WatchIT.WebAPI.Services/WatchIT.WebAPI.Services.Common/WatchIT.WebAPI.Services.Common.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.3.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.12" />
+  </ItemGroup>
+
 </Project>
