--- a/WatchIT.WebAPI.Services/WatchIT.WebAPI.Services.MoviesService/WatchIT.WebAPI.Services.MoviesService.csproj
+++ b/WatchIT.WebAPI.Services/WatchIT.WebAPI.Services.MoviesService/WatchIT.WebAPI.Services.MoviesService.csproj
@@ -1,13 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\WatchIT.WebAPI.Model\WatchIT.WebAPI.Model.csproj" />
+    <PackageReference Include="WatchIT.Common" Version="0.1.0-alpha.25" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\WatchIT.WebAPI.Model\WatchIT.WebAPI.Database.csproj" />
+    <ProjectReference Include="..\WatchIT.WebAPI.Services.Common\WatchIT.WebAPI.Services.Common.csproj" />
   </ItemGroup>
 
 </Project>
