--- a/.github/workflows/pull-request-test.yml
+++ b/.github/workflows/pull-request-test.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Add NuGet source
-      run: dotnet nuget add source https://nuget.pkg.github.com/WatchITProject/index.json --username ${{secrets.NUGET_SOURCE_USERNAME}} --password ${{NUGET_SOURCE_TOKEN}}
+      run: dotnet nuget add source https://nuget.pkg.github.com/WatchITProject/index.json --username ${{secrets.NUGET_SOURCE_USERNAME}} --password ${{secrets.NUGET_SOURCE_TOKEN}}
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
