--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Go to API directory
+        run: cd WatchIT.WebAPI
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
