--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -16,7 +16,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Go to API directory
-        run: cd WatchIT.WebAPI
+        run: |
+          pwd
+          ls
+          cd WatchIT.WebAPI
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
