--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -40,9 +40,9 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up NuGet username variable
-        run: echo "${{secrets.NUGET_SOURCE_USERNAME}}" >> $WATCHIT_API_NUGET_USERNAME
+        run: export WATCHIT_API_NUGET_USERNAME=${{secrets.NUGET_SOURCE_USERNAME}}
       - name: Set up NuGet password variable
-        run: echo "${{secrets.NUGET_SOURCE_PASSWORD}}" >> $NUGET_SOURCE_TOKEN
+        run: export NUGET_SOURCE_TOKEN=${{secrets.NUGET_SOURCE_PASSWORD}}
       - name: Build the Docker image
         run: docker build -t ghcr.io/watchit/watchit-api:latest .
       - name: Publish the Docker image
