--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Set up NuGet username variable
         run: export WATCHIT_API_NUGET_USERNAME=${{secrets.NUGET_SOURCE_USERNAME}}
       - name: Set up NuGet password variable
-        run: export NUGET_SOURCE_TOKEN=${{secrets.NUGET_SOURCE_PASSWORD}}
+        run: export WATCHIT_API_NUGET_PASSWORD=${{secrets.NUGET_SOURCE_TOKEN}}
       - name: Build the Docker image
         run: docker build -t ghcr.io/watchit/watchit-api:latest .
       - name: Publish the Docker image
