--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -36,12 +36,12 @@ jobs:
     needs: build-and-publish
     runs-on: watchit-dev
     steps:
-      - name: Run docker container
-        uses: addnab/docker-run-action@v3
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
         with:
+          registry: ghcr.io
           username: ${{ secrets.NUGET_SOURCE_USERNAME }}
           password: ${{ secrets.NUGET_SOURCE_TOKEN }}
-          registry: ghcr.io
-          image: ghcr.io/watchitproject/watchit-api:latest
-          options: -p 7174:443
+      - name: Run docker container
+        run: docker run --name api -p 10443:443 -p 1080:80 ghcr.io/watchitproject/watchit-api:latest
       
