--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -47,5 +47,5 @@ jobs:
         run: docker container rm api
         continue-on-error: true
       - name: Run Docker container
-        run: docker run --name api -p 10443:443 -p 1080:80 --rm ghcr.io/watchitproject/watchit-api:latest
+        run: docker run --name api -p 10443:443 -p 1080:80 --rm -d ghcr.io/watchitproject/watchit-api:latest
       
