--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -38,14 +38,17 @@ jobs:
     steps:
       - name: Login to GitHub Container Registry
         run: docker login ghcr.io -u ${{secrets.NUGET_SOURCE_USERNAME}} -p ${{ secrets.NUGET_SOURCE_TOKEN }}
-      - name: Pull Docker image
-        run: docker pull ghcr.io/watchitproject/watchit-api:latest
       - name: Stop Docker container
         run: docker container stop api
         continue-on-error: true
       - name: Remove Docker container
         run: docker container rm api
         continue-on-error: true
+      - name: Remove Docker image
+        run: docker container rm api
+        continue-on-error: true
+      - name: Pull Docker image
+        run: docker image rm ghcr.io/watchitproject/watchit-api:latest
       - name: Run Docker container
         run: docker run --name api -p 10443:443 -p 1080:80 --rm -d ghcr.io/watchitproject/watchit-api:latest
       
