--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -45,10 +45,10 @@ jobs:
         run: docker container rm api
         continue-on-error: true
       - name: Remove Docker image
-        run: docker container rm api
+        run: docker image rm ghcr.io/watchitproject/watchit-api:latest
         continue-on-error: true
       - name: Pull Docker image
-        run: docker image rm ghcr.io/watchitproject/watchit-api:latest
+        run: docker pull ghcr.io/watchitproject/watchit-api:latest
       - name: Run Docker container
         run: docker run --name api -p 10443:443 -p 1080:80 --rm -d ghcr.io/watchitproject/watchit-api:latest
       
