--- a/WatchIT.WebAPI.Services/WatchIT.WebAPI.Services.AccountsService/WatchIT.WebAPI.Services.Accounts.csproj
+++ b/WatchIT.WebAPI.Services/WatchIT.WebAPI.Services.AccountsService/WatchIT.WebAPI.Services.Accounts.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Owin.Cors" Version="4.2.2" />
     <PackageReference Include="Microsoft.Owin.Host.SystemWeb" Version="4.2.2" />
     <PackageReference Include="Microsoft.Owin.Security.OAuth" Version="4.2.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.12" />
     <PackageReference Include="WatchIT.Common" Version="0.1.0-alpha.32" />
   </ItemGroup>
