--- a/WatchIT.WebAPI.Services/WatchIT.WebAPI.Services.Common/WatchIT.WebAPI.Services.csproj
+++ b/WatchIT.WebAPI.Services/WatchIT.WebAPI.Services.Common/WatchIT.WebAPI.Services.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.3.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.12" />
   </ItemGroup>
 
