--- a/WatchIT.WebAPI.Services/WatchIT.WebAPI.Services.GenreService/WatchIT.WebAPI.Services.Genres.csproj
+++ b/WatchIT.WebAPI.Services/WatchIT.WebAPI.Services.GenreService/WatchIT.WebAPI.Services.Genres.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="WatchIT.Common" Version="0.1.0-alpha.32" />
   </ItemGroup>
 
