--- a/WatchIT.WebAPI/WatchIT.WebAPI.csproj
+++ b/WatchIT.WebAPI/WatchIT.WebAPI.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.Owin.Host.SystemWeb" Version="4.2.2" />
     <PackageReference Include="Microsoft.Owin.Security.OAuth" Version="4.2.2" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="WatchIT.Common" Version="0.1.0-alpha.32" />
   </ItemGroup>
