--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - "dev"
     paths:
-      - 'WatchIT.WebAPI.**'
+      - 'WatchIT.WebAPI**'
       - 'Dockerfile'
       - '.github/workflows/**'
 
