--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -50,5 +50,5 @@ jobs:
       - name: Pull Docker image
         run: docker pull ghcr.io/watchitproject/watchit-api:latest
       - name: Run Docker container
-        run: docker run --name api -p 10443:443 -p 1080:80 --restart unless-stopped --rm -d ghcr.io/watchitproject/watchit-api:latest
+        run: docker run --name api -p 10443:443 -p 1080:80 --restart unless-stopped -d ghcr.io/watchitproject/watchit-api:latest
       
